--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -36,8 +36,11 @@
                                             <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a
             >
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/user">Users</a>
+                <li class="nav-item">
+            <a class="nav-link" href="/cat">Cats</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="/user">Users</a>
                                         </li>
                                         <% if(currentUser){%>
                                             <li class="nav-item">
