--- a/views/cats/index.ejs
+++ b/views/cats/index.ejs
@@ -7,6 +7,7 @@
     <% cats.forEach(cat => {%>
         <tr>
             <td>
+                <img width="200" height="auto" src="<%= cat.imgUrl %>" />
                 <%= cat.name %>
             </td>
             <td>
