--- a/views/cats/new.ejs
+++ b/views/cats/new.ejs
@@ -15,7 +15,7 @@
             <input name="location" type="text" placeholder="Which neighbourhood?" />
         </div>
         <div>
-            <label>Location</label>
+            <label>Image</label>
             <input name="imgUrl" type="file" />
         </div>
 
