--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,1 +1,17 @@
-<h1>home</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-md-5 mx-auto">
+            <h1>Welcome</h1>
+
+            <p>Log in or register as a new user to help neighbourhood cats!</p>
+            <div class="mt-3">
+                <a href="/auth/login" class="btn btn-primary btn-block">I already have an account</a>
+            </div>
+            <div class="mt-3">
+                <a href="/auth/register" class="btn btn-primary btn-block">I'm a new cat friend!</a>
+
+            </div>
+            </form>
+        </div>
+    </div>
+</div>
