--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -1,5 +1,6 @@
 <div class="container mt-3">
-    <h2>New User</h2>
+    <h2>Hi new cat friend!</h2>
+    <h6>Please enter your details below...</h6>
 
     <form action="/auth/register" method="post">
         <div>
