--- a/views/cats/new.ejs
+++ b/views/cats/new.ejs
@@ -20,6 +20,6 @@
         </div>
 
 
-        <button type="submit">Submit New Cat</button>
+        <button type="submit" class="btn btn-primary ">Submit New Cat</button>
     </form>
 </div>
