--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -1,13 +1,13 @@
 <table>
     <thead>
         <tr>
-            <td>Cat Friends</td>
+            <h3>Cat Friends</h3>
         </tr>
     </thead>
-    <% users.forEach(cat => {%>
+    <% users.forEach(user => {%>
         <tr>
             <td>
-                <img width="200" height="auto" src="<%= user.imgUrl %>" />
+                <img width="50" height="50" src="<%= user.imgUrl %>" />
                 <%= user.username %>
 
             </td>
