--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -40,6 +40,9 @@
             <a class="nav-link" href="/cat">Cats</a>
                                         </li>
                                         <li class="nav-item">
+                                            <a class="nav-link" href="/cat/new">New Cat</a>
+                                        </li>
+                                        <li class="nav-item">
                                             <a class="nav-link" href="/user">Users</a>
                                         </li>
                                         <% if(currentUser){%>
