--- a/views/cats/new.ejs
+++ b/views/cats/new.ejs
@@ -16,7 +16,7 @@
         </div>
         <div>
             <label>Image</label>
-            <input name="imgUrl" type="file" />
+            <input name="imgUrl" type="file" multiple />
         </div>
 
 
