--- a/views/cats/index.ejs
+++ b/views/cats/index.ejs
@@ -1,3 +1,10 @@
+<style>
+    body>table>tbody>tr>td>img {
+        height: 200px;
+        object-fit: cover;
+    }
+</style>
+
 <table>
     <thead>
         <tr>
@@ -7,7 +14,7 @@
     <% cats.forEach(cat => {%>
         <tr>
             <td>
-                <img width="200" height="200" src="<%= cat.imgUrl %>" />
+                <img width="200" height="200" src="<%= cat.imgUrls[0].path %>" />
             </td>
             <td>
                 <%= cat.name %>
